STAR-146: add error handling for get coordinates, remove test resolve coordinates, remove SBDefinition
